trying yet another surefire setting